--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <section class="card profile">
         <img class="profile__photo" src="images/photo.png" alt="Фото автора" />
         <div class="profile__info">
-          <h2 class="profile__name">Багажник Зелебражник</h2>
+          <h2 class="profile__name">Дадаев Абдул</h2>
           <p class="profile__group">Группа: ЭФБО-09-24</p>
           <p class="profile__text">
             Это простой сайт-портфолио: несколько страниц, общий CSS и форма обратной связи.
@@ -75,3 +75,4 @@
   </div>
 </body>
 </html>
+
